--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-command = "cd linux-ricing && npm run build && cd .." 
+command = "cd linux-ricing && npm install && npm run build && cd .." 
 publish = "linux-ricing/build"
