--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,5 @@
 [build]
-command = "cd linux-ricing && npm install && npm run build && cd .." 
-publish = "linux-ricing/build"
+command = "cd linux-ricing && npm run install && npm run build && cd .. && cd linux-ricing-server && npm install && npm run start"
+publish = "linux-ricing/build" 
+[functions]
+directory = "linux-ricing-server" 
